@@ -1,5 +1,5 @@
 a@2014-04-01.yang:21: error: CHK_LEAFREF_PATH_CHANGED
 a@2014-04-01.yang:27: error: CHK_BASE_TYPE_CHANGED
 a@2014-04-01.yang:67: error: CHK_NEW_MANDATORY
-a@2014-04-01.yang:83: error: CHK_DEF_ADDED
-a@2014-04-01.yang:109: error: CHK_DEF_ADDED
+a@2014-04-01.yang:84: error: CHK_DEF_ADDED
+a@2014-04-01.yang:110: error: CHK_DEF_ADDED
